--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,14 @@ body {
   background-color: #849d8f;
 }
 
+input,
+textarea {
+  font-family: "Roboto", Arial, sans-serif;
+}
+
 a {
   text-decoration: none;
+  color: #ffffff;
 }
 
 .main-header {
@@ -238,7 +244,8 @@ a {
 .button-search::before,
 .login-link::before,
 .cart-button::before,
-.cart-delete-btn::before {
+.cart-delete-btn::before,
+.feedback-form-close::before {
   content: "";
   position: absolute;
   width: 21px;
@@ -297,6 +304,8 @@ a {
   padding: 10px 14px;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
+  text-decoration-color: #adbdb4;
 }
 
 .user-navigation-item {
@@ -316,6 +325,12 @@ a {
 .site-navigation-items:hover {
   color: #323232;
   background-color: #ffffff;
+  text-decoration: none;
+}
+
+.site-navigation-items:focus {
+  box-shadow: inset 0 1px 2px 0 #696969;
+  text-decoration: none;
 }
 
 .catalog-body .catalog-dropdown .site-navigation-items {
@@ -324,8 +339,30 @@ a {
 
 .breadcrumbs {
   display: flex;
-  width: 250px;
+  width: 220px;
   justify-content: space-between;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.breadcrumbs a:nth-child(3) {
+  color: #ffffff;
+  border-bottom: 1px solid rgba(255, 255, 255, .3)
+}
+
+.active::after {
+  content: "»";
+  position: relative;
+  right: -8px;
+}
+
+.active:hover,
+.active:focus {
+  background-color: none;
+  color: #ffbc9e;
 }
 
 .filter-form {
@@ -449,6 +486,7 @@ a {
   padding-left: 20px;
   border-radius: 14px;
   background-color: #a8bab0;
+  cursor: pointer;
 }
 
 .range-controls .scale {
@@ -706,7 +744,7 @@ a {
   margin: 5px 0;
 }
 
-.feedback-form {
+.open-feedback-form {
   padding: 13px 30px;
   border-radius: 25px;
   color: #ffffff;
@@ -738,6 +776,7 @@ padding-right: 2%;*/
   padding-right: 13px;
   padding-top: 7px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .icecream-card:hover {
@@ -877,7 +916,7 @@ padding-right: 2%;*/
 }
 
 .page:active {
-  background-color: #ffffff;
+  background-color: #fcfcfc;
 }
 
 .main-footer {
@@ -1042,11 +1081,16 @@ padding-right: 2%;*/
 .cart-form {
   right: 0;
   min-width: 500px;
+  min-height: 200px;
   color: #323232;
   padding: 20px;
   font-size: 13px;
   font-weight: 400;
   line-height: 16px;
+}
+
+.cart-form-body {
+  padding-bottom: 10px;
 }
 
 .cart-delete-btn {
@@ -1060,8 +1104,6 @@ padding-right: 2%;*/
   outline: none;
   background-color: transparent;
   background-repeat: no-repeat;
-  width: 14px;
-  height: 14px;
 }
 
 .cart-delete-btn::before {
@@ -1075,9 +1117,15 @@ padding-right: 2%;*/
   font-size: 15px;
   font-weight: 700;
   line-height: 18px;
+  padding-top: 10px;
+  border-top: 1px solid #cacac7;
 }
 
 .cart-checkout {
+  position: absolute;
+  bottom: 20px;
+  right: 14px;
+  padding: 10px 15px;
   padding: 13px 30px;
   border-radius: 25px;
   color: #ffffff;
@@ -1095,7 +1143,6 @@ padding-right: 2%;*/
   font-size: 18px;
   line-height: 24px;
   text-align: center;
-  text-shadow: 0 2px 5px rgba(160, 32, 11, .76);
   background-color: #f26843;
   box-shadow: 0 2px 2px rgba(172, 16, 0, .64);
   color: #fff;
@@ -1124,6 +1171,7 @@ padding-right: 2%;*/
   position: relative;
   top: 100%;
   right: 0%;
+  text-decoration: none;
 }
 
 .search-dropdown:hover .search-form {
@@ -1135,6 +1183,12 @@ padding-right: 2%;*/
   right: 0;
   min-width: 300px;
   margin: 0;
+}
+
+.user-navigation-item:focus,
+.user-navigation-item:hover {
+  background-color: #ffffff;
+  color: #323232;
 }
 
 .login-dropdown:hover .login-form {
@@ -1159,6 +1213,15 @@ padding-right: 2%;*/
 
 .catalog-dropdown-items li:active {
   background-color: #f6b5a5;
+}
+
+.catalog-dropdown-items .sliv {
+  background-color: #d07058;
+}
+
+.catalog-dropdown-items .sliv a {
+  color: #ffffff;
+  /*вернуться*/
 }
 
 .catalog-categories a {
@@ -1202,7 +1265,8 @@ input[type="radio"].visually-hidden {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+textarea {
   border-radius: 4px;
   border: 1px solid #d3d3d2;
   padding: 3px 15px;
@@ -1210,4 +1274,97 @@ input[type="password"] {
   line-height: 24px;
   box-sizing: border-box;
   width: 100%;
+}
+
+.feedback-form {
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 11%;
+  left: 34%;
+  max-width: 430px;
+  max-height: 440px;
+  background-color: #f8f7f4;
+  border-radius: 8px;
+  padding: 20px 25px;
+  z-index: 100;
+}
+
+.feedback-form-show {
+  visibility: visible;
+}
+
+.feedback-form-close {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  font-size: 0;
+  box-shadow: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
+
+.feedback-form-close::before {
+  background-image: url(../img/cross-big.svg);
+  left: 0;
+  top: 0;
+}
+
+.feedback-form-title {
+  color: #323232;
+  font-size: 24px;
+  line-height: 28px;
+  margin: 0 0 25px;
+  ;
+}
+
+.feedback-form input[type="text"] {
+  background-color: #ffffff;
+  margin-bottom: 20px;
+  max-width: 268px;
+  color: #999999;
+  font-size: 16px;
+  line-height: 24px;
+  padding-left: 10px;
+}
+
+#comment-field {
+  font-family: "Roboto", Arial, sans-serif;
+  color: #999999;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  width: 425px
+}
+
+.feedback-form-profile textarea {
+  width: 400px;
+  margin-bottom: 15px;
+  padding: 10px 20px 10px 10px;
+}
+
+.feedback-form .big-red-button {
+  float: right;
+}
+
+.page-fade-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 90;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5)
+}
+
+.page-fade-overlay-show {
+  display: block
 }
